Improve responsive UI for mobile

--- a/src/app/components/events-table/events-table.component.html
+++ b/src/app/components/events-table/events-table.component.html
@@ -103,8 +103,7 @@
 
       </table>
 
-      <mat-paginator [pageSizeOptions]="[5, 10, 20]" [pageSize]="5"
-                     showFirstLastButtons></mat-paginator>
+      <mat-paginator [pageSizeOptions]="[5, 10, 100]" [pageSize]="5" showFirstLastButtons></mat-paginator>
 
     </mat-expansion-panel>
 
