--- a/src/app/components/events-table/events-table.component.scss
+++ b/src/app/components/events-table/events-table.component.scss
@@ -30,7 +30,7 @@ img {
   flex-grow: 3 !important;
 }
 
-@media (min-width: 769px) {
+@media (min-width: 768px) {
 
   th.mat-mdc-header-cell:first-of-type, td.mat-mdc-cell:first-of-type, td.mat-mdc-footer-cell:first-of-type {
     padding-left: 0;
@@ -43,7 +43,7 @@ img {
   td.mat-mdc-column-image {
     width: 7%;
     font-weight: lighter;
-    line-height: 1.4;
+    line-height: 1.1;
     vertical-align: top;
     padding-top: 0.4rem;
     padding-right: 6px;
@@ -53,7 +53,7 @@ img {
   td.mat-mdc-column-name {
     width: 12%;
     font-weight: lighter;
-    line-height: 1.4;
+    line-height: 1.1;
     vertical-align: top;
     padding-top: 0.4rem;
   }
@@ -61,7 +61,7 @@ img {
   td.mat-mdc-column-time {
     width: 12%;
     font-weight: lighter;
-    line-height: 1.4;
+    line-height: 1.1;
     vertical-align: top;
     padding-top: 0.4rem;
     padding-right: 6px;
@@ -70,17 +70,16 @@ img {
   td.mat-mdc-column-miner {
     width: 8%;
     font-weight: lighter;
-    line-height: 1.4;
+    line-height: 1.1;
     vertical-align: top;
     padding-top: 0.4rem;
     padding-right: 6px;
   }
 
-
   td.mat-mdc-column-block {
     width: 8%;
     font-weight: lighter;
-    line-height: 1.4;
+    line-height: 1.1;
     vertical-align: top;
     padding-top: 0.4rem;
     padding-right: 6px;
@@ -89,7 +88,7 @@ img {
   td.mat-mdc-column-trxHash {
     width: 26%;
     font-weight: lighter;
-    line-height: 1.4;
+    line-height: 1.1;
     vertical-align: top;
     padding-top: 0.4rem;
     padding-right: 6px;
@@ -98,8 +97,8 @@ img {
   td.mat-mdc-column-value {
     width: 45%;
     font-weight: lighter;
-    white-space: pre-wrap;
-    line-height: 1.4;
+    white-space: nowrap;
+    line-height: 1.1;
     vertical-align: top;
     padding-top: 0.4rem;
     padding-right: 6px;
@@ -122,7 +121,7 @@ img {
   }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 768px) {
 
   td.mat-mdc-column-image {
     font-size: small;
@@ -187,7 +186,7 @@ img {
         text-align: left;
         align-content: end;
         word-break: break-word;
-        white-space: pre-line;
+        white-space: nowrap;
         font-weight: lighter;
         font-size: small;
 
