--- a/src/app/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/components/modal-dialog/modal-dialog.component.html
@@ -5,7 +5,7 @@
 
   <div class="spacer"></div>
 
-  <mat-grid-list cols="10" >
+  <mat-grid-list cols="10">
 
     <mat-grid-tile colspan="2">
       <button (click)="onCloseClick()" mat-button cdkFocusInitial style="">Close</button>
@@ -16,7 +16,8 @@
 
     <mat-grid-tile colspan="7">
       <div>
-      Set block number {{data.blockNumber}}  as  <a (click)="onPinStart()" >start</a>,  <a (click)="onPinEnd()" >end</a> or <a (click)="onPinStartEnd()" >both</a>
+        Set block number {{data.blockNumber}} as <a (click)="onPinStart()">start</a>, <a (click)="onPinEnd()">end</a> or
+        <a (click)="onPinStartEnd()">both</a>
       </div>
     </mat-grid-tile>
 
