--- a/src/app/components/settings/settings.component.scss
+++ b/src/app/components/settings/settings.component.scss
@@ -9,13 +9,17 @@ input.mat--mdc-input-element, textarea{
 }
 
 mat-form-field {
-  margin-left: 10px;
-  margin-right: 10px;
-  width: 100%;
+  margin-left: 1%;
+  margin-left: 1%;
+  width: 49%;
 }
 
 .mat-expansion-panel-header-title,
 .mat-expansion-panel-header-description {
   display:flex;
   flex-basis: fit-content;
+}
+
+.mat-form-field-full-line {
+  width: 99%;
 }
