--- a/src/app/components/modal-dialog/modal-dialog-content.component.scss
+++ b/src/app/components/modal-dialog/modal-dialog-content.component.scss
@@ -1,4 +1,4 @@
-div, .mat-list-base .mat-list-item, .mat-list-item-content, {
+div, .mat-list-base .mat-list-item, .mat-list-item-content {
   white-space: pre-wrap;
   font-weight: lighter;
   line-height: 1.1rem;
