--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -11,7 +11,7 @@
 
       <mat-form-field>
         <label for="startBlock"></label>
-        <input (input)="updateStartValue()" (keyup.enter)="reloadPage()" [value]="startBlock"
+        <input (keyup.enter)="reloadPage()" [value]="startBlock"
                formControlName="startBlock"
                id="startBlock" matInput placeholder="Enter start block number" type="text" autocomplete="off">
       </mat-form-field>
@@ -28,7 +28,7 @@
       </mat-form-field>
 
       <mat-form-field>
-        <label for="provider"></label><input (input)="updateProviderValue()" (keyup.enter)="reloadPage()"
+        <label for="provider"></label><input (keyup.enter)="reloadPage()"
                                              [value]="provider" formControlName="provider" id="provider"
                                              matInput
                                              placeholder="Enter web3 provider URL"
