Fix "ngFor is deprecated"

--- a/src/app/components/modal-dialog/modal-dialog-content.component.html
+++ b/src/app/components/modal-dialog/modal-dialog-content.component.html
@@ -8,9 +8,11 @@
     @if (transactions && transactions.length > 0) {
       <div>Transactions:</div>
       <ul>
-        <li *ngFor="let message of transactions">
-          <a (click)="renderTransaction(message)">{{message}}</a>
-        </li>
+        @for (message of transactions; track message) {
+          <li>
+            <a (click)="renderTransaction(message)">{{message}}</a>
+          </li>
+        }
       </ul>
     }
   </div>
