Enhance modal dialog styling, improve table cell word wrapping, and update form control subscriptions in SettingsComponent

--- a/src/app/components/modal-dialog/modal-dialog.component.html
+++ b/src/app/components/modal-dialog/modal-dialog.component.html
@@ -5,7 +5,7 @@
             <h2>Details</h2>
         </div>
         <div class="modal-close-btn">
-            <button (click)="onCloseClick()" mat-button color="primary" cdkFocusInitial aria-label="Close dialog">Close</button>
+            <button (click)="onCloseClick()" mat-flat-button color="primary" cdkFocusInitial aria-label="Close dialog" class="modal-close">Close</button>
         </div>
     </div>
 
