--- a/src/app/components/events-table/events-table.component.scss
+++ b/src/app/components/events-table/events-table.component.scss
@@ -1,10 +1,11 @@
-
 table {
   width: 100%;
 }
 
-cell {
-  white-space: nowrap;
+.break-word {
+  white-space: normal;
+  word-break: break-word;
+  overflow-wrap: anywhere;
 }
 
 img {
@@ -19,13 +20,8 @@ img {
 }
 
 @media (min-width: 768px) {
-
 }
-
-@media (min-width: 768px) {
-
-}
-
 
 @media (max-width: 768px) {
+  td, th { font-size: 0.9rem; }
 }
