--- a/src/app/components/settings/settings.component.html
+++ b/src/app/components/settings/settings.component.html
@@ -49,15 +49,21 @@
 
 
       <mat-form-field class="mat-form-field-full-line">
-        <label for="abi"></label><textarea (blur)="onBlurAbi()" (input)="updateABIValue($any($event.target).value)"
-                                           (focus)="onFocusAbi()"
-                                           [cdkAutosizeMaxRows]="noOfRowsAbi"
-                                           cdkAutosizeMinRows="1" cdkTextareaAutosize
-                                           appJsonFormatter
-                                           formControlName="abi" id="abi" matInput
-                                           placeholder="Enter ABI of contract"
-                                           spellcheck="false"
-                                           autocomplete="off"></textarea>
+        <label for="abi"></label>
+        <div class="json-editor-wrapper">
+          <div class="json-highlight" [innerHTML]="highlightedAbi"></div>
+          <textarea (blur)="onBlurAbi()" (input)="updateABIValue($any($event.target).value)"
+                    (focus)="onFocusAbi()"
+                    (scroll)="onScrollAbi($event)"
+                    [cdkAutosizeMaxRows]="noOfRowsAbi"
+                    cdkAutosizeMinRows="1" cdkTextareaAutosize
+                    appJsonFormatter
+                    formControlName="abi" id="abi" matInput
+                    placeholder="Enter ABI of contract"
+                    spellcheck="false"
+                    autocomplete="off"
+                    class="json-editor"></textarea>
+        </div>
         @if (form.controls['abi'] && form.controls['abi'].invalid && (form.controls['abi'].touched || form.controls['abi'].dirty) && !form.controls['abi'].pending && form.controls['abi'].hasError('json')) {
           <mat-error>Invalid JSON ABI</mat-error>
         }
